fixed overflow issue

--- a/assets/newsletter.css
+++ b/assets/newsletter.css
@@ -24,9 +24,9 @@
     height: 50px;
     background: orangered);
     /* border-color: transparent; */
-    border-radius: 20px 0 0 20px
-}
+    border-radius: 20px 0 0 20px;
 
+}
 .form-control {
     border: 2px solid black;
 }
