--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,15 @@
 * {
-  font-family: "Lato", "sans-serif";
+  font-family: 'Lato', 'sans-serif';
   /* font-size: 18px; */
 }
 
 body {
   color: black;
+  width: auto;
+  max-width: 1440px;
+}
+body {
+  overflow-x: hidden;
 }
 
 p {
@@ -12,7 +17,7 @@ p {
 }
 
 li {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////
